--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "author": "Eugenio Vinicio Berretta <euberdeveloper@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "euberlog": "^2.0.9",
         "express": "^4.17.1",
