--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "euberlog": "^2.0.9",
         "express": "^4.17.1",
+        "handlebars": "^4.7.7",
         "helmet": "^4.4.1",
         "morgan": "^1.10.0"
     }
