--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "cd server && node index.js",
     "postinstall": "cd server && npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
