--- a/shell/ipshare.service
+++ b/shell/ipshare.service
@@ -6,7 +6,7 @@ Type=simple
 Restart=always
 RestartSec=5
 User=ubuntu
-ExecStart=/usr/bin/node /home/ubuntu/eagletrt-telemetria-ip/client/index.js
+ExecStart=/home/ubuntu/eagletrt-telemetria-ip/client/client.sh
 WorkingDirectory=/home/ubuntu/eagletrt-telemetria-ip/client
 [Install]
 WantedBy=multi-user.target
