--- a/shell/ipshare-node.service
+++ b/shell/ipshare-node.service
@@ -1,3 +1,8 @@
+[Unit]
+Description=Eagle-TRT telemetry ip share
+StartLimitIntervalSec=0
+[Service]
+Type=simple
 Restart=always
 RestartSec=5
 User=ubuntu
