--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "eagletrt-telemetria-ip-client",
+    "name": "eagletrt-ermes-client",
     "version": "1.0.0",
     "description": "Sends the ip of the raspberry of the telemetria",
     "main": "index.js",
